Set bigger dimensions to background to avoid white shadows because of blurring

--- a/src/scripts/components/scenes/SnkrsVote.styl
+++ b/src/scripts/components/scenes/SnkrsVote.styl
@@ -2,14 +2,14 @@
 
   .snkrs-vote-bg
     position: absolute
-    top: 0
-    left: 0
+    top: -5%
+    left: -5%
     background-position: center center
     background-size: cover
     background-color: white
     background-repeat: no-repeat
-    width: 100%
-    height: 100%
+    width: 110%
+    height: 110%
     filter: blur(1px);
     -webkit-filter: blur(1px);
 
